--- a/tg-bot/learn/language/Deutsch.txt
+++ b/tg-bot/learn/language/Deutsch.txt
@@ -1,1 +1,3 @@
-Этот раздел еще не заполнен! Вернитесь сюда позже
+По ссылке ниже вы сможете на ознакомительном уровне изучить Немецкий язык.
+
+Этот материал не является индивидуальным!
